Closed Bug 359191 Opened 18 years ago Closed 18 years ago

Mingw build error in nsMailWinIntegration.cpp when trying to build Thunderbird

Categories

(Thunderbird :: Mail Window Front End, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: mscott)

References

Details

(Keywords: fixed1.8.1.1)

Attachments

(2 files)

I suspect the build error started when the fix for bug 353906 was checked in.

This is the build error log:
DHAVE_UNISTD_H=1 -DHAVE_MALLOC_H=1 -DHAVE_LIBM=1 -DNO_X11=1 -DMMAP_MISSES_WRITES
=1 -DHAVE_STRERROR=1 -DHAVE_SNPRINTF=1 -DHAVE_MEMMOVE=1 -DHAVE_RINT=1 -DVA_COPY=
va_copy -DHAVE_VA_COPY=1 -DMOZ_EMBEDDING_LEVEL_DEFAULT=1 -DMOZ_EMBEDDING_LEVEL_B
ASIC=1 -DMOZ_EMBEDDING_LEVEL_MINIMAL=1 -DMOZ_THUNDERBIRD=1 -DMOZ_BUILD_APP=mail
-DMOZ_XUL_APP=1 -DMOZ_DEFAULT_TOOLKIT=\"cairo-windows\" -DMOZ_THEBES=1 -DMOZ_CAI
RO_GFX=1 -DMOZ_STATIC_MAIL_BUILD=1 -DMOZ_DISTRIBUTION_ID=\"org.mozilla\" -DIBMBI
DI=1 -DMOZ_VIEW_SOURCE=1 -DMOZ_XPINSTALL=1 -DMOZ_JSLOADER=1 -DNS_PRINTING=1 -DNS
_PRINT_PREVIEW=1 -DMOZ_XTF=1 -DMOZ_UPDATE_CHANNEL=default -DMOZ_FEEDS=1 -DMOZ_ST
ORAGE=1 -DMOZ_LOGGING=1 -DHAVE___CXA_DEMANGLE=1 -DMOZ_DEMANGLE_SYMBOLS=1 -DMOZ_U
SER_DIR=\"Mozilla\" -DHAVE_STDINT_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_UINT64_T=1 -DMO
Z_XUL=1 -DMOZ_PROFILELOCKING=1 -DMOZ_RDF=1 -DMOZ_MORK=1 -DMOZ_DLL_SUFFIX=\".dll\
" -DJS_THREADSAFE=1 -DMOZ_REFLOW_PERF=1 -DMOZ_REFLOW_PERF_DSP=1 -DMOZILLA_LOCALE
_VERSION=\"1.9a1\" -DMOZILLA_REGION_VERSION=\"1.9a1\" -DMOZILLA_SKIN_VERSION=\"1
.8\"  -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cygdrive/c/thunderbird/mozilla/mail
/components/shell/nsMailWinIntegration.cpp
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:45:28: nsI
MapiSupport.h: No such file or directory
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp: In member
 function `nsresult nsWindowsShellService::setDefaultMail(PRBool)':
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:345: error
: `nsIMapiSupport' was not declared in this scope
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:345: error
: template argument 1 is invalid
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:345: error
: invalid type in declaration before '(' token
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:345: error
: `NS_IMAPISUPPORT_CONTRACTID' was not declared in this scope
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:347: error
: base operand of `->' is not a pointer
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:345: warni
ng: unused variable 'nsIMapiSupport'
c:/thunderbird/mozilla/mail/components/shell/nsMailWinIntegration.cpp:345: warni
ng: unused variable 'NS_IMAPISUPPORT_CONTRACTID'
make[6]: *** [nsMailWinIntegration.o] Error 1
make[6]: Leaving directory `/cygdrive/c/thunderbird/mozilla/mail/components/shel
l'
make[5]: *** [libs] Error 2
make[5]: Leaving directory `/cygdrive/c/thunderbird/mozilla/mail/components'
make[4]: *** [libs] Error 2
make[4]: Leaving directory `/cygdrive/c/thunderbird/mozilla/mail'
make[3]: *** [libs_tier_app] Error 2
make[3]: Leaving directory `/cygdrive/c/thunderbird/mozilla'
make[2]: *** [tier_app] Error 2
make[2]: Leaving directory `/cygdrive/c/thunderbird/mozilla'
make[1]: *** [alldep] Error 2
make[1]: Leaving directory `/cygdrive/c/thunderbird/mozilla'
make: *** [alldep] Error 2

C:\thunderbird\mozilla>
It looks like we don't build mailnews\mapi at all if you are using a mingw compiler. Martijn, if you comment out the rferences to nsIMapiSupport in nsMailWinIntegration, do things then compile? I"m trying to figure out if we should ifdef out those calls or just avoid compiling the shell service all together for mingw. 
(In reply to comment #1)
> It looks like we don't build mailnews\mapi at all if you are using a mingw
> compiler. Martijn, if you comment out the rferences to nsIMapiSupport in
> nsMailWinIntegration, do things then compile?

Yeah, then things do compile. (sorry for the delay)

Attached patch possible fixSplinter Review
I've tried the patch, and it makes (that part of) Thunderbird compile again under mingw.
is there another part that's still broken?

Thanks a lot for testing this so quickly!
Attachment #246091 - Flags: superreview?(bienvenu)
Attachment #246091 - Flags: approval-thunderbird2+
Comment on attachment 246091 [details] [diff] [review]
possible fix

so mingw32 builds don't support mapi, and that's ok?
Attachment #246091 - Flags: superreview?(bienvenu) → superreview+
(In reply to comment #5)
> is there another part that's still broken?

There are other parts that are broken in my mingw build, but those are not mail specific.
Thanks for fixing!

(In reply to comment #6)
> so mingw32 builds don't support mapi, and that's ok?

No, that's not ok. But I have no idea if that's the fault of Mozilla or mingw.
If that's the fault of Mozilla, then a new bug should be filed about that, I think.
it sounds like the mingw build environment doesn't have the windows mapi header files...is that possible?
It seems to me this is the mapi header file from mingw, so it seems to me that mingw does support mapi.
Thanks for fixing the build error Scott!

Could someone add a dependency on Bug 203303?
Blocks: mingw
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.1
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: