Bug #359191 --> mingw build error because mapi isn't built for mingw. sr=bienvenu